Wrap dismiss button only if present and fix 'dismissable' spelling
Builds on https://github.com/DFE-Digital/teaching-vacancies/commit/95a88d7d3422dd580f16a01e6343d9cf3ef8e25b

--- a/app/components/shared/notification_component/notification_component.scss
+++ b/app/components/shared/notification_component/notification_component.scss
@@ -12,7 +12,7 @@
   }
 }
 
-.js-dismissable {
+.js-dismissible {
   transition: opacity 0.6s;
 }
 
@@ -37,6 +37,10 @@
   &.icon--right .govuk-notification__content {
     padding-right: govuk-spacing(5);
   }
+
+  &.js-dismissible .govuk-notification__content {
+    padding-right: govuk-spacing(9);
+  }
 }
 
 .govuk-notification__title {
@@ -48,7 +52,6 @@
 
 .govuk-notification__body {
   @include govuk-font($size: 19);
-  padding-right: govuk-spacing(9);
 
   p {
     @include govuk-responsive-margin(4, 'bottom');
